<resources>
    <string name="app_name">Presta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="connectivity_error">Connectivity Error</string>
    <string name="server_error">\"Server Error: \"</string>
    <string name="unknown_error">\"Unknown Error: \"</string>
    <string name="form_required_field">El campo es requerido</string>
    <string name="form_required_number_field">El campo tiene que ser numerico</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="dni">DNI</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancel</string>
</resources>